# Rust_EVM

./: CLI_GUIDE.md  Cargo.toml  README.md  trace.csv
src/: lib.rs  main.rs
src/advanced/: mod.rs
src/block/: mod.rs
src/cli/: mod.rs
src/debug/: mod.rs
src/events/: mod.rs
src/executor/: mod.rs
src/gas/: mod.rs
src/memory/: mod.rs
src/opcodes/: mod.rs
src/stack/: mod.rs
src/storage/: mod.rs
src/tracing/: mod.rs
src/types/: address.rs  bytes.rs  hash.rs  mod.rs  uint256.rs
src/validation/: mod.rs
