[package]
name = "evm-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# For cryptographic operations
sha3 = "0.10"
ripemd = "0.1"
secp256k1 = "0.28"
# For big integer operations
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
# For serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# For error handling
thiserror = "1.0"
# For logging
log = "0.4"
env_logger = "0.10"
# For hex encoding/decoding
hex = "0.4"
# For collections
indexmap = "2.0"
# For CLI interface
clap = { version = "4.0", features = ["derive"] }